--- a/Invoices/SAPUI5/webapp/i18n/i18n.properties
+++ b/Invoices/SAPUI5/webapp/i18n/i18n.properties
@@ -5,6 +5,12 @@ appDesciption=Invoices List
 #
 showHelloButtonText=Say Hello i18n
 helloMsg=Hello i18n {0}
+helloDialogBut=Say Hello Dialog
+dialogCloseBut=Ok
 
 #Panels
 helloPanel=Hello Panel
+
+#Fragment
+panelFrTitle=Fragment Form
+labelPerson=Name
