--- a/Invoices/SAPUI5/webapp/i18n/i18n.properties
+++ b/Invoices/SAPUI5/webapp/i18n/i18n.properties
@@ -14,3 +14,9 @@ helloPanel=Hello Panel
 #Fragment
 panelFrTitle=Fragment Form
 labelPerson=Name
+
+#Invoices
+invoiceListTitle=Invoices
+invoicesStatusA=New
+invoicesStatusB=In Progress
+invoicesStatusC=Done
