--- a/Invoices/SAPUI5/webapp/i18n/i18n.properties
+++ b/Invoices/SAPUI5/webapp/i18n/i18n.properties
@@ -20,3 +20,6 @@ invoiceListTitle=Invoices
 invoicesStatusA=New
 invoicesStatusB=In Progress
 invoicesStatusC=Done
+
+#Detail
+detailsPageTitle=Invoice Details
