--- a/Invoices/SAPUI5/webapp/i18n/i18n.properties
+++ b/Invoices/SAPUI5/webapp/i18n/i18n.properties
@@ -23,3 +23,10 @@ invoicesStatusC=Done
 
 #Detail
 detailsPageTitle=Invoice Details
+
+#Product Rating
+productRatingIndicator=Your rating: {0} out of {1}
+productRatingLabelInitial=Please rate this product
+productRatingLabelFinal=Thak you for your rating!
+productRatingButton=Rate
+ratingConfirmation=You have rated this product with {0} stars
