--- a/Invoices/SAPUI5/webapp/i18n/i18n.properties
+++ b/Invoices/SAPUI5/webapp/i18n/i18n.properties
@@ -20,6 +20,11 @@ invoiceListTitle=Invoices
 invoicesStatusA=New
 invoicesStatusB=In Progress
 invoicesStatusC=Done
+columnQuantity=Quantity
+columnName=Name
+columnStatus=Status
+columnSupplier=Supplier
+columnPrice=Price
 
 #Detail
 detailsPageTitle=Invoice Details
@@ -30,3 +35,9 @@ productRatingLabelInitial=Please rate this product
 productRatingLabelFinal=Thak you for your rating!
 productRatingButton=Rate
 ratingConfirmation=You have rated this product with {0} stars
+
+#Accessibility
+overviewRootLabel=Overview Page
+overviewContentLabel=Page Content
+overviewHeaderLabel=Header
+searchFieldPlaceHolder=Search by Product
